[project]
name = "ai-architecture-diagram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=1.1.1",
    "ipython>=9.11.0",
    "matplotlib>=3.10.8",
    "pillow>=12.1.1",
    "requests>=2.32.5",
]
